2024-01-13 17:16:11
User: Daeijan
Map name: mapmap1
Time spent: 10
Result: Lost
2024-01-13 17:14:12
User: HajAmou
Map name: mapeteste2
Time spent: 9
Result: Lost
2024-01-13 17:10:29
User: AsgharKhan
Map name: testmap1
Time spent: 9
Result: Win
2024-01-13 15:59:35
User: kk
Map name: kk
Time spent: 3
Result: Lost
2024-01-13 15:58:54
User: kk
Map name: kk
Time spent: 2
Result: Win
2024-01-13 15:58:28
User: kk
Map name: kk
Time spent: 3
Result: Win
2024-01-13 15:54:11
User: kk
Map name: kk
Time spent: 1
Result: Win
2024-01-13 15:51:20
User: kk
Map name: kk
Time spent: 1
Result: Win
2024-01-13 15:49:08
User: kk
Map name: kk
Time spent: 1
Result: Lost
2024-01-13 15:47:34
User: kk
Map name: kk
Time spent: 1
Result: Win
2024-01-13 15:46:23
User: kk
Map name: kk
Time spent: 2
Result: Win
2024-01-13 15:45:55
User: kk
Map name: kk
Time spent: 2
Result: Win
2024-01-13 15:42:55
User: amou
Map name: ammap
Time spent: 3
Result: Win
2024-01-13 15:36:32
User: haji
Map name: a
Time spent: 2
Result: Win
2024-01-13 15:32:26
User: haji
Map name: f
Time spent: 1
Result: Lost
2024-01-13 15:31:45
User: haji
Map name: sd
Time spent: 2
Result: Lost
2024-01-13 15:31:07
User: haji
Map name: 3
Time spent: 1
Result: Win
2024-01-13 15:29:16
User: haji
Map name: a'
Time spent: 2
Result: Win
2024-01-13 15:26:45
User: haji
Map name: ff
Time spent: 3
Result: Lost
2024-01-13 15:26:02
User: haji
Map name: m
Time spent: 1
Result: Lost
2024-01-13 15:25:28
User: akbar
Map name: k
Time spent: 2
Result: Lost
2024-01-13 15:16:30
User: akbar
Map name: jj
Time spent: 3
Result: Win
2024-01-13 15:15:00
User: akbar
Map name: ff
Time spent: 5
Result: Win
2024-01-13 15:14:19
User: akbar
Map name: mm
Time spent: 3
Result: Win
2024-01-13 15:11:31
User: akbar
Map name: kk
Time spent: 4
Result: Lost
2024-01-13 15:11:00
User: akbar
Map name: kk
Time spent: 2
Result: Win
2024-01-13 15:07:29
User: akbar
Map name: mm
Time spent: 2
Result: Win
2024-01-13 15:06:59
User: akbar
Map name: mm
Time spent: 3
Result: Win