@@ -1,0 +1,5 @@
+3
+3
+10 8 0 
+9 15 10 
+12 13 67 
